# EnvToolSetupJunkBox

./: ELK_setup.md  ESP8266Note  ESP8266Note.md  ESP8266_update_firmware.md  HLS_example_playlist.m3u8  HLS_example_playlist_m3u8.md  HTTPS_learn_from_heade.md  HTTPS_learn_from_heade.mdr  README.md  TLS_learn_from_heade.md  TLS_learn_from_header.md  build_curl_from_source.md  build_gcc_10.sh  build_python_from_source.md  ctags_setup.md  curl-with-nghttp2.md  curl.md  django_setup_cheatsheet.md  elasticsearch_setup_cheatsheet.md  ffmpeg.md  git_setup.md  h2o_server_setup.md  innodb_study_note.md  javascript_tool_setup.md  logstash_sample.conf.rb  mairaDB_useful_commands.md  mariaDB_server_setup.md  mqtt_tls_library_install.md  mqtt_tls_library_junkbox.md  nginx_setup.md  nodejs_swagger_setup.md  openssl_cert_setup.md  openssl_cmd_note.md  pip_commands.md  pip_venv_commands.md  postgresql_db_setup.md  python_celery_setup.md  rabbitmq_setup.md  rabbitmq_study_note.md  rhonabwy.md  (+2 more)
code_snippet/: README.md  file_access.c
code_snippet/c/ffmpeg/transcode_fragment/: CMakeLists.txt  README.md  common.c  common.h  custom_avio_transcoding_hls.c  custom_avio_transcoding_mp4.c  filter.c  filter.h  input_frag.c  input_frag.h  mp4_hdr.c  mp4_hdr.h  output_file.c  output_file.h  output_hls.c  output_hls.h  packet.c  packet.h
code_snippet/c/libuv/: CMakeLists.txt  file_access.c  pipe_stream.c  progress.c  queue_work.c  rwlock.c  tcp_echo_client.c  tcp_echo_server.c
code_snippet/c/openssl/: rsa_keygen.c
code_snippet/lua/nvim/custom_ide/: example.vimspector.json  init.lua
code_snippet/lua/nvim/custom_ide/lua/: keys.lua  opts.lua  plug.lua
code_snippet/python/: asyncio_mp_requests.py  killprocess.py  kombu_example.py  opencv.py  rsa_pubkey_modulus_base64url.py  security.py  storage.py
code_snippet/python/alembic/: command.py  config.py  env.py
code_snippet/python/django/: storage.py
code_snippet/python/django/3.x/: URL_resolver_usage.md  middleware.py  migrations.py  signals.py
code_snippet/python/django/3.x/common/: forms__deprecated.py  formsets__deprecated.py
code_snippet/python/django/3.x/contrib/auth/: middleware.py  models.py
code_snippet/python/django/3.x/membership/: forms__deprecated.py  views__deprecated.py
code_snippet/python/django/5.x/: migration_run_python_example.py
code_snippet/rust/async_prog/timer_future/: Cargo.toml
code_snippet/rust/async_prog/timer_future/src/: lib.rs  main.rs
code_snippet/rust/async_prog/tokio/mini-redis-demo/: Cargo.toml  README.md
code_snippet/rust/async_prog/tokio/mini-redis-demo/src/: connection.rs  db.rs  frame.rs  lib.rs  parse.rs  shutdown.rs
code_snippet/rust/async_prog/tokio/mini-redis-demo/src/clients/: client.rs  mod.rs
code_snippet/rust/async_prog/tokio/mini-redis-demo/src/cmd/: get.rs  mod.rs  publish.rs  set.rs  subscribe.rs  unknown.rs
code_snippet/rust/rustonomicon/ffi_sample/: Cargo.toml  build.rs
code_snippet/rust/rustonomicon/ffi_sample/c_src/: arith.c  example.c
code_snippet/rust/rustonomicon/ffi_sample/src/: main.rs
code_snippet/rust/the_book/: concurrency.rs  generic_vs_associated_type.rs  syntax-learn.rs
code_snippet/rust/the_book/blog/src/: lib.rs  main.rs
code_snippet/rust/the_book/guessing_game/: Cargo.toml
code_snippet/rust/the_book/guessing_game/src/: main.rs
code_snippet/rust/the_book/gui/src/: lib.rs  main.rs
code_snippet/rust/the_book/halo_macro/: Cargo.toml
code_snippet/rust/the_book/halo_macro/halo_macro_derive/: Cargo.toml
code_snippet/rust/the_book/halo_macro/halo_macro_derive/src/: lib.rs
code_snippet/rust/the_book/halo_macro/src/: lib.rs  main.rs
code_snippet/rust/the_book/minigrep/src/: lib.rs  main.rs
docs/: index.html
elasticsearch/5.6/: access_pattern_cheatsheet.md  basic_usage_cheatsheet.md  client_query_django.py  configuration.md  index_mapping_template.json  internal-architecture.md  quickstart.md  setup.md  xpack-usage-cheetsheet.md
mariaDB/: command-reference.md  server_setup_10.3.md  server_setup_11.2.md
nginx/: core_setup.md  example.conf  example.conf.nginx  vhost_traffic_status.md
