CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)
PROJECT(ffmpeg_experiment C)

SET(VERSION_MAJOR "0")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "1")

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GNUTLS    REQUIRED  gnutls>=3.7.2)
PKG_CHECK_MODULES(NETTLE    REQUIRED  nettle>=3.7.2)
PKG_CHECK_MODULES(P11KIT    REQUIRED  p11-kit-1>=0.24.0)
PKG_CHECK_MODULES(AVCODEC   REQUIRED  libavcodec>=58.91.100)
PKG_CHECK_MODULES(AVDEVICE  REQUIRED  libavdevice>=58.10.100)
PKG_CHECK_MODULES(AVFILTER  REQUIRED  libavfilter>=7.85.100)
PKG_CHECK_MODULES(AVFORMAT  REQUIRED  libavformat>=58.45.100)
PKG_CHECK_MODULES(AVUTIL    REQUIRED  libavutil>=56.51.100)
PKG_CHECK_MODULES(POSTPROC  REQUIRED  libpostproc>=55.7.100)
PKG_CHECK_MODULES(SWSCALE   REQUIRED  libswscale>=5.7.100)
PKG_CHECK_MODULES(SWRESAMPLE  REQUIRED  libswresample>=3.7.100)


SET(CC_WARNING_FLAGS "-Wall -Wdisabled-optimization -Wpointer-arith -Wredundant-decls -Wwrite-strings -Wtype-limits -Wundef -Wmissing-prototypes -Wno-pointer-to-int-cast -Wstrict-prototypes -Wempty-body -Wno-parentheses -Wno-switch -Wno-format-zero-length -Wno-pointer-sign -Wno-unused-const-variable -Wno-bool-operation -Wno-char-subscripts")

SET(CMAKE_C_FLAGS "-std=c17 -g3 -fomit-frame-pointer -fPIC -pthread ${CC_WARNING_FLAGS} ${CMAKE_C_FLAGS}")

IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_C_FLAGS_DEBUG  "-O0")
SET(CMAKE_C_FLAGS_RELEASE  "-O2")


INCLUDE_DIRECTORIES(
    ${GNUTLS_INCLUDE_DIRS}
    ${NETTLE_INCLUDE_DIRS}
    ${P11KIT_INCLUDE_DIRS}
    ${AVCODEC_INCLUDE_DIRS}
    ${AVDEVICE_INCLUDE_DIRS}
    ${AVFILTER_INCLUDE_DIRS}
    ${AVFORMAT_INCLUDE_DIRS}
    ${AVUTIL_INCLUDE_DIRS}
    ${POSTPROC_INCLUDE_DIRS}
    ${SWSCALE_INCLUDE_DIRS}
    ${SWRESAMPLE_INCLUDE_DIRS})

LINK_DIRECTORIES(
    ${GNUTLS_LIBRARY_DIRS}
    ${NETTLE_LIBRARY_DIRS}
    ${P11KIT_LIBRARY_DIRS}
    ${AVCODEC_LIBRARY_DIRS}
    ${AVDEVICE_LIBRARY_DIRS}
    ${AVFILTER_LIBRARY_DIRS}
    ${AVFORMAT_LIBRARY_DIRS}
    ${AVUTIL_LIBRARY_DIRS}
    ${POSTPROC_LIBRARY_DIRS}
    ${SWSCALE_LIBRARY_DIRS}
    ${SWRESAMPLE_LIBRARY_DIRS})

SET(TEST_SOURCE_FILES
    common.c
    filter.c
    input_frag.c
    mp4_hdr.c
    output_file.c
    packet.c
    custom_avio_transcoding_mp4.c)

SET(TEST_EXE_NAME  custom_avio_transcoding_mp4)

ADD_EXECUTABLE(${TEST_EXE_NAME} ${TEST_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TEST_EXE_NAME}
    ${GNUTLS_LIBRARIES}
    ${NETTLE_LIBRARIES}
    ${P11KIT_LIBRARIES}
    ${AVCODEC_LIBRARIES}
    ${AVDEVICE_LIBRARIES}
    ${AVFILTER_LIBRARIES}
    ${AVFORMAT_LIBRARIES}
    ${AVUTIL_LIBRARIES}
    ${POSTPROC_LIBRARIES}
    ${SWSCALE_LIBRARIES}
    ${SWRESAMPLE_LIBRARIES})

