[package]
name = "mini-redis-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.0"
tokio = {version="1", features=["full"]}
tokio-stream = "0.1"
async-stream = "0.3"

## resolve async trait method in `src/cmd/mod.rs`
# TODO , is the crate `async-trait` stablized ? what about the feature
# `async_fn_in_trait` providied by the compiler or standard library ?
async-trait = "0.1"

## following crates applied to `parse` module
atoi = "0.3"


## tracing = "0.1.34"
## tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
